--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,13 +5,13 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 <header class="lg:flex p-5 gap-5">
     <Astronav>
         <div class="flex w-full justify-between">
-            <a>CH</a>
-            <div class="block md:hidden"><MenuIcon class="w-4 h-4 text-white"/></div>
+            <a href="/">CH</a>
+            <div class="block lg:hidden"><MenuIcon class="w-4 h-4 text-white"/></div>
         </div>
         <MenuItems class="hidden lg:flex">
         <ul class="flex flex-col lg:flex-row lg:gap-5">
             <li><a href="/">Home</a></li>
-            <li>Galleries</li>
+            <li><a href="/galleries">Galleries</a></li>
             <li><a href="/portfolio">Portfolio</a></li>
             <li><a href="/resume">Resume</a></li>
             <li><a href="/about">About</a></li>
