--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,21 +1,23 @@
 ---
 import MainHead from "./MainHead.astro";
 import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 
 const  { title, seoTitle, seoDesc } = Astro.props;
 ---
 
-
 <html>
     <MainHead title={title} seoTitle={seoTitle} seoDesc={seoDesc} />
-    <body class="bg-slate-900 text-white">
+    <body class="bg-slate-900 text-white grid gap-0">
         <Nav />
         <slot />
+        <Footer />
         <style>
             body {
                 font-family: "Protest Strike", sans-serif;
                 min-height: 100vh;
-            }
+            };
+            
         </style>
     </body>
 </html>
