--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -11,5 +11,5 @@ const { title, seoTitle, seoDesc } = Astro.props;
         <title>{title}</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Honk&family=Protest+Strike&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
     </head>
