--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,13 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro"
+
 ---
 <MainLayout>
     <h1>About</h1>
+    <div class="parallax-container">
+        <div class="layer background" style="background-image: url('/assets/background.png');"></div>
+        <div class="layer midground" style="background-image: url('/assets/midground.png');"></div>
+        <div class="layer foreground" style="background-image: url('/assets/foreground.png');"></div>
+      </div>
 </MainLayout>
 
