--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,15 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro"
+import Parallax from "../components/Parallax.astro"
 
 ---
 <MainLayout>
-    <h1>About</h1>
-    <div class="parallax-container">
-        <div class="layer background" style="background-image: url('/assets/background.png');"></div>
-        <div class="layer midground" style="background-image: url('/assets/midground.png');"></div>
-        <div class="layer foreground" style="background-image: url('/assets/foreground.png');"></div>
-      </div>
-</MainLayout>
+    <Parallax >
+     <h1>About</h1>    
+      <h2>About2</h2>
+      <h3>About3</h3>
+      <h4>About4</h4>
+      <h5>About5</h5>
+    </Parallax>
+    </MainLayout>
 
