Add @astrojs/renderer-react dependency and update Parallax component

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,12 +4,13 @@ import Parallax from "../components/Parallax.astro"
 
 ---
 <MainLayout>
-    <Parallax >
-     <h1>About</h1>    
-      <h2>About2</h2>
-      <h3>About3</h3>
-      <h4>About4</h4>
-      <h5>About5</h5>
-    </Parallax>
+  <head> 
+    <title>About</title>
+  </head>
+  <figure><Parallax /></figure>
+  <h1>About</h1>    
+   <img>
+  
+    </body>
     </MainLayout>
 
