--- a/src/components/Parallax.astro
+++ b/src/components/Parallax.astro
@@ -1,13 +1,27 @@
 ---
 import 'tailwindcss/tailwind.css';
-import "../parallax.jsx"
+
 ---
 
-<Parallax />
-<div class="relative overflow-hidden h-screen">
-  <div id="background" class="absolute w-full h-full" style="background-image: url('/assets/background.jpg'); background-size: cover; z-index: 1;"></div>
-  <div id="midground" class="absolute w-full h-full" style="background-image: url('/assets/midground.png'); background-size: cover; z-index: 2;"></div>
-  <div id="foreground" class="absolute w-full h-full" style="background-image: url('/assets/foreground.png'); background-size: cover; z-index: 3;"></div>
+<div class="relative overflow-hidden w-8/12 h-screen md:w-6/12">
+  <div id="background" class="absolute w-full h-[95%]" style="background-image: url('/assets/background.png'); background-size: cover; z-index: 1;"></div>
+  <div id="midground" class="absolute w-full h-[90%]" style="background-image: url('/assets/midground.png'); background-size: cover; z-index: 2;"></div>
+  <div id="foreground" class="absolute w-full h-[90%]" style="background-image: url('/assets/foreground.png'); background-size: cover; z-index: 3;"></div>
+  <div class="spacer" style="h-[100%]"></div> <!-- Add this line -->
 </div>
-</Parallax>
-  
+
+<script>
+document.addEventListener('scroll', () => {
+  const scrollPosition = window.scrollY;
+  const background = document.getElementById('background');
+  const midground = document.getElementById('midground');
+  const foreground = document.getElementById('foreground');
+
+  if (background && midground && foreground) {
+    // Adjust these values to change the speed of each layer
+    background.style.transform = `translateY(${scrollPosition * .1}px)`;
+    midground.style.transform = `translateY(${scrollPosition * .75}px)`;
+    foreground.style.transform = `translateY(${scrollPosition * .75}px)`;
+  }
+});
+</script>
