--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,6 +13,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
             <li><a href="/">Home</a></li>
             <li><a href="/galleries">Galleries</a></li>
             <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/charts">Charts</a></li>
             <li><a href="/resume">Resume</a></li>
             <li><a href="/about">About</a></li>
         </ul>
