--- a/src/components/Parallax.astro
+++ b/src/components/Parallax.astro
@@ -1,27 +1,42 @@
 ---
 import 'tailwindcss/tailwind.css';
-import { astroImageTools } from "astro-imagetools";
+import 'atropos/css';
+import Atropos from 'atropos'
+
+const myAtropos = Atropos({
+  el: '.my-atropos',
+  // rest of parameters
+});
+
 ---
 
-<div class="relative overflow-hidden w-full min-h-400px h-screen">
-  <div id="background" class="absolute w-full h-[95%]" style="background-image: url('/assets/background.png'); background-size: cover; z-index: 1;"></div>
-  <div id="midground" class="absolute w-full h-[90%]" style="background-image: url('/assets/midground.png'); background-size: cover; z-index: 2;"></div>
-  <div id="foreground" class="absolute w-full h-[90%]" style="background-image: url('/assets/foreground.png'); background-size: cover; z-index: 3;"></div>
-  <div class="spacer" style="h-[100%]"></div> <!-- Add this line -->
+<div class="atropos">
+  <div class="atropos-scale">
+    <div class="atropos-rotate">
+      <div class="atropos-inner">
+        <!--
+        Element with negative offset will move in reverse direction,
+        making it appear behind the scene
+        -->
+        <img src="/assets/background.png" data-atropos-offset="-1" />
+        <!--
+        Element with no offset will not move
+        -->
+        <img src="/assets/midground.png" data-atropos-offset="0" />
+        <!--
+        Element with positive offset will move in same direction,
+        making it appear in front of the scene
+        -->
+        <img src="/assets/foreground.png" data-atropos-offset="1" />
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
-document.addEventListener('scroll', () => {
-  const scrollPosition = window.scrollY;
-  const background = document.getElementById('background');
-  const midground = document.getElementById('midground');
-  const foreground = document.getElementById('foreground');
-
-  if (background && midground && foreground) {
-    // Adjust these values to change the speed of each layer
-    background.style.transform = `translateY(${scrollPosition * .1}px)`;
-    midground.style.transform = `translateY(${scrollPosition * .75}px)`;
-    foreground.style.transform = `translateY(${scrollPosition * .75}px)`;
-  }
+document.addEventListener('DOMContentLoaded', function () {
+  const Atropos = new Atropos('.atropos', {
+    // Add your Atropos options here
+  });
 });
 </script>
