--- a/src/pages/galleries.astro
+++ b/src/pages/galleries.astro
@@ -1,7 +1,10 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro"
+import Slideshow from "../components/Slideshow.astro"
 ---
 <MainLayout>
     <h1>Galleries</h1>
+    <section><Slideshow></section>
+    
 </MainLayout>
 
