added imagekit src to test

--- a/src/pages/galleries.astro
+++ b/src/pages/galleries.astro
@@ -1,10 +1,10 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro"
-import Slideshow from "../components/Slideshow.astro"
+import Image from "astro/components/Image.astro"
 ---
 <MainLayout>
     <h1>Galleries</h1>
-    <section><Slideshow></section>
-    
+    <section><image src="https://ik.imagekit.io/hesc9etyf/Cody%20Portfolio%20Images/Full%20Size%20Images%205k+/Rooftop%20Photo.jpg?updatedAt=1715077155189"></image>
+    </section>
 </MainLayout>
 
